--- a/paid-subscribe/index.html
+++ b/paid-subscribe/index.html
@@ -364,81 +364,6 @@
                             <hr />
                                                         <div class="panel panel-default">
                                 <div class="panel-heading">
-                                    <a href="javascript:;" class="js_to" data-url="https://sy.wgkzg.com/#/register?code=" data-type="Shanshui" data-code="FDn6IwOG" target="_blank"><b>山水云</b></a>
-                                </div>
-                                <div class="panel-body">
-                                    
-                                    <dl>
-                                        <dt>资费</dt>
-                                                                                <dd>
-                                            <p>
-                                                <label>100G/月-小学：</label> ¥ 4.99/月付。 
-                                                                                                每月100GB云传输流量; 
-                                                                                                解锁SS中转高速线路; 
-                                                                                                解锁IEPL专线节点; 
-                                                                                                全流媒体解锁，包含GPT等服务; 
-                                                                                                支持24小时客服响应; 
-                                                                                            </p>
-                                        </dd>
-                                                                                <dd>
-                                            <p>
-                                                <label>200G/月-初中：</label> ¥ 9.99/月付。 
-                                                                                                每月200GB云传输流量; 
-                                                                                                解锁SS中转高速线路; 
-                                                                                                解锁IEPL专线节点; 
-                                                                                                全流媒体解锁，包含GPT等服务; 
-                                                                                                支持24小时客服响应; 
-                                                                                            </p>
-                                        </dd>
-                                                                                <dd>
-                                            <p>
-                                                <label>500G/月-高中：</label> ¥ 23.99/月付。 
-                                                                                                每月500GB云传输流量; 
-                                                                                                解锁SS中转高速线路; 
-                                                                                                解锁IEPL专线节点; 
-                                                                                                全流媒体解锁，包含GPT等服务; 
-                                                                                                支持24小时客服响应; 
-                                                                                            </p>
-                                        </dd>
-                                                                                <dd>
-                                            <p>
-                                                <label>800G/月-大学：</label> ¥ 39.99/月付。 
-                                                                                                每月800GB云传输流量; 
-                                                                                                解锁SS中转高速线路; 
-                                                                                                解锁IEPL专线节点; 
-                                                                                                全流媒体解锁，包含GPT等服务; 
-                                                                                                支持24小时客服响应; 
-                                                                                            </p>
-                                        </dd>
-                                                                                <dd>
-                                            <p>
-                                                <label>不限时间150G：</label> ¥ 30/一次性。 
-                                                                                                150GB不限时间云传输流量; 
-                                                                                                解锁SS中转高速线路; 
-                                                                                                解锁IEPL专线节点; 
-                                                                                                全流媒体解锁，包含GPT等服务; 
-                                                                                                支持24小时客服响应; 
-                                                                                            </p>
-                                        </dd>
-                                                                                <dd>
-                                            <p>
-                                                <label>不限时间500G：</label> ¥ 90/一次性。 
-                                                                                                500GB不限时间云传输流量; 
-                                                                                                解锁SS中转高速线路; 
-                                                                                                解锁IEPL专线节点; 
-                                                                                                全流媒体解锁，包含GPT等服务; 
-                                                                                                支持24小时客服响应; 
-                                                                                            </p>
-                                        </dd>
-                                                                            </dl>
-                                </div>
-                                <div class="panel-footer">
-                                    <a href="javascript:;" class="js_to" data-url="https://sy.wgkzg.com/#/register?code=" data-type="Shanshui" data-code="FDn6IwOG" target="_blank">点击查看</a>
-                                </div>
-                            </div>
-                            <hr />
-                                                        <div class="panel panel-default">
-                                <div class="panel-heading">
                                     <a href="javascript:;" class="js_to" data-url="https://muguacloud.top/#/register?code=" data-type="Mugua" data-code="vyGmgr86" target="_blank"><b>木瓜云</b></a>
                                 </div>
                                 <div class="panel-body">
@@ -539,16 +464,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-112475.htm" title="如何使用Clash进行在线订阅转换的详细指南">如何使用Clash进行在线订阅转换的详细指南</a></li>
-                        <li class="py-2"><a href="/news/article-125614.htm" title="突破网络限制：Clash代理工具全面解析与实战指南">突破网络限制：Clash代理工具全面解析与实战指南</a></li>
-                        <li class="py-2"><a href="/news/article-115245.htm" title="我的世界Clash全攻略：在沙盒与策略的交汇处统治战场">我的世界Clash全攻略：在沙盒与策略的交汇处统治战场</a></li>
-                        <li class="py-2"><a href="/news/article-116153.htm" title="深度解读Clash官网及全方位使用指南：开启智能代理新时代">深度解读Clash官网及全方位使用指南：开启智能代理新时代</a></li>
-                        <li class="py-2"><a href="/news/article-112816.htm" title="布谷i科学上网全攻略：从新手入门到进阶使用的完整指南">布谷i科学上网全攻略：从新手入门到进阶使用的完整指南</a></li>
                         <li class="py-2"><a href="/news/article-125286.htm" title="深度指南：Shadowrocket免ID使用全攻略与安全上网实践">深度指南：Shadowrocket免ID使用全攻略与安全上网实践</a></li>
-                        <li class="py-2"><a href="/news/article-124311.htm" title="深度剖析V2RayNG与Trojan：从原理到实践的翻墙技术全指南">深度剖析V2RayNG与Trojan：从原理到实践的翻墙技术全指南</a></li>
-                        <li class="py-2"><a href="/news/article-115542.htm" title="锐速与V2Ray安装顺序终极解析：性能与隐私的平衡之道">锐速与V2Ray安装顺序终极解析：性能与隐私的平衡之道</a></li>
-                        <li class="py-2"><a href="/news/article-118350.htm" title="小宝科学上网全攻略：从下载安装到高效使用的实用指南">小宝科学上网全攻略：从下载安装到高效使用的实用指南</a></li>
-                        <li class="py-2"><a href="/news/article-123665.htm" title="沉浸式虚拟体验：手把手教你下载与安装VR Clash游戏全攻略">沉浸式虚拟体验：手把手教你下载与安装VR Clash游戏全攻略</a></li>
+                        <li class="py-2"><a href="/news/article-119280.htm" title="2021年终极指南：如何寻找并稳定使用永久V2Ray节点">2021年终极指南：如何寻找并稳定使用永久V2Ray节点</a></li>
+                        <li class="py-2"><a href="/news/article-124953.htm" title="Clash免费节点配置全攻略：从入门到精通的安全代理指南">Clash免费节点配置全攻略：从入门到精通的安全代理指南</a></li>
+                        <li class="py-2"><a href="/news/article-111633.htm" title="闪电狼CLASH全面指南：精通战术与策略，制胜游戏巅峰">闪电狼CLASH全面指南：精通战术与策略，制胜游戏巅峰</a></li>
+                        <li class="py-2"><a href="/news/article-115851.htm" title="Clash没网了怎么办？一次性解决代理打开却断网的深层问题">Clash没网了怎么办？一次性解决代理打开却断网的深层问题</a></li>
+                        <li class="py-2"><a href="/news/article-122068.htm" title="突破网络边界：V2Ray科学上网全攻略与深度解析">突破网络边界：V2Ray科学上网全攻略与深度解析</a></li>
+                        <li class="py-2"><a href="/news/article-127945.htm" title="伪造IP冲突：网络安全的隐形杀手与全面防御指南">伪造IP冲突：网络安全的隐形杀手与全面防御指南</a></li>
+                        <li class="py-2"><a href="/news/article-114926.htm" title="潘多拉固件中集成V2Ray全攻略：从配置到优化的科学上网实践笔记">潘多拉固件中集成V2Ray全攻略：从配置到优化的科学上网实践笔记</a></li>
+                        <li class="py-2"><a href="/news/article-124636.htm" title="手把手教你用Padavan路由器搭建V2Ray科学上网环境：从入门到精通">手把手教你用Padavan路由器搭建V2Ray科学上网环境：从入门到精通</a></li>
+                        <li class="py-2"><a href="/news/article-114302.htm" title="完整指南：如何在智能电视上使用 v2ray 打破网络限制">完整指南：如何在智能电视上使用 v2ray 打破网络限制</a></li>
                     </ul>
     </div>
 </div>
@@ -560,7 +485,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">20</span> <a href="/date/2025-06/" title="2025-06 归档">2025-06</a></h4>
+                <h4><span class="badge" style="float: right;">26</span> <a href="/date/2025-06/" title="2025-06 归档">2025-06</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">34</span> <a href="/date/2025-05/" title="2025-05 归档">2025-05</a></h4>
