--- a/about-us.htm
+++ b/about-us.htm
@@ -124,16 +124,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
+                        <li class="py-2"><a href="/news/article-128299.htm" title="安卓用户必备：全方位科学上网工具指南与实战技巧">安卓用户必备：全方位科学上网工具指南与实战技巧</a></li>
+                        <li class="py-2"><a href="/news/article-126271.htm" title="解锁全球网络自由：AC1200GU路由器科学上网完全攻略">解锁全球网络自由：AC1200GU路由器科学上网完全攻略</a></li>
+                        <li class="py-2"><a href="/news/article-119280.htm" title="2021年终极指南：如何寻找并稳定使用永久V2Ray节点">2021年终极指南：如何寻找并稳定使用永久V2Ray节点</a></li>
+                        <li class="py-2"><a href="/news/article-118350.htm" title="小宝科学上网全攻略：从下载安装到高效使用的实用指南">小宝科学上网全攻略：从下载安装到高效使用的实用指南</a></li>
+                        <li class="py-2"><a href="/news/article-128644.htm" title="深度掌握Shadowrocket批量导入：从入门到精通的完整指南">深度掌握Shadowrocket批量导入：从入门到精通的完整指南</a></li>
+                        <li class="py-2"><a href="/news/article-123988.htm" title="Clash汉化版13.3完全攻略：从零开始掌握科学上网利器">Clash汉化版13.3完全攻略：从零开始掌握科学上网利器</a></li>
+                        <li class="py-2"><a href="/news/article-126945.htm" title="全面解析撞击棒：从入门到精通的终极指南">全面解析撞击棒：从入门到精通的终极指南</a></li>
+                        <li class="py-2"><a href="/news/article-114626.htm" title="深度解析车clash：提升汽车安全的关键">深度解析车clash：提升汽车安全的关键</a></li>
+                        <li class="py-2"><a href="/news/article-122068.htm" title="突破网络边界：V2Ray科学上网全攻略与深度解析">突破网络边界：V2Ray科学上网全攻略与深度解析</a></li>
                         <li class="py-2"><a href="/news/article-112115.htm" title="解密Surfboard苹果：一款融合科技与体验的智能设备全解析">解密Surfboard苹果：一款融合科技与体验的智能设备全解析</a></li>
-                        <li class="py-2"><a href="/news/article-119881.htm" title="天路科学上网软件全攻略：从下载到精通的一站式指南">天路科学上网软件全攻略：从下载到精通的一站式指南</a></li>
-                        <li class="py-2"><a href="/news/article-111639.htm" title="完整指南：如何购买并配置 Clash 套餐">完整指南：如何购买并配置 Clash 套餐</a></li>
-                        <li class="py-2"><a href="/news/article-120184.htm" title="360极速浏览器与v2ray的黄金组合：打造极致安全与速度的上网体验全攻略">360极速浏览器与v2ray的黄金组合：打造极致安全与速度的上网体验全攻略</a></li>
-                        <li class="py-2"><a href="/news/article-113121.htm" title="全面解析Shadowrocket游戏：使用教程与配置指南">全面解析Shadowrocket游戏：使用教程与配置指南</a></li>
-                        <li class="py-2"><a href="/news/article-121435.htm" title="深度剖析Clash悟空云：从零掌握高效代理与云端加速的完美融合">深度剖析Clash悟空云：从零掌握高效代理与云端加速的完美融合</a></li>
-                        <li class="py-2"><a href="/news/article-124636.htm" title="手把手教你用Padavan路由器搭建V2Ray科学上网环境：从入门到精通">手把手教你用Padavan路由器搭建V2Ray科学上网环境：从入门到精通</a></li>
-                        <li class="py-2"><a href="/news/article-118043.htm" title="海角科学上网全攻略：技术原理、实操步骤与优化技巧详解">海角科学上网全攻略：技术原理、实操步骤与优化技巧详解</a></li>
-                        <li class="py-2"><a href="/news/article-115245.htm" title="我的世界Clash全攻略：在沙盒与策略的交汇处统治战场">我的世界Clash全攻略：在沙盒与策略的交汇处统治战场</a></li>
-                        <li class="py-2"><a href="/news/article-118663.htm" title="如何启动V2Ray：从安装到配置的完整实操指南">如何启动V2Ray：从安装到配置的完整实操指南</a></li>
                     </ul>
     </div>
 </div>
@@ -145,7 +145,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">20</span> <a href="/date/2025-06/" title="2025-06 归档">2025-06</a></h4>
+                <h4><span class="badge" style="float: right;">26</span> <a href="/date/2025-06/" title="2025-06 归档">2025-06</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">34</span> <a href="/date/2025-05/" title="2025-05 归档">2025-05</a></h4>
