--- a/client.htm
+++ b/client.htm
@@ -275,16 +275,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-118043.htm" title="海角科学上网全攻略：技术原理、实操步骤与优化技巧详解">海角科学上网全攻略：技术原理、实操步骤与优化技巧详解</a></li>
-                        <li class="py-2"><a href="/news/article-124636.htm" title="手把手教你用Padavan路由器搭建V2Ray科学上网环境：从入门到精通">手把手教你用Padavan路由器搭建V2Ray科学上网环境：从入门到精通</a></li>
+                        <li class="py-2"><a href="/news/article-116465.htm" title="UC浏览器科学上网全攻略：移动端畅游互联网的高效利器">UC浏览器科学上网全攻略：移动端畅游互联网的高效利器</a></li>
+                        <li class="py-2"><a href="/news/article-118663.htm" title="如何启动V2Ray：从安装到配置的完整实操指南">如何启动V2Ray：从安装到配置的完整实操指南</a></li>
                         <li class="py-2"><a href="/news/article-125953.htm" title="突破网络边界：Pure科学上网工具全方位解析与实用指南">突破网络边界：Pure科学上网工具全方位解析与实用指南</a></li>
-                        <li class="py-2"><a href="/news/article-122715.htm" title="告别卡顿！全面解析Clash高延迟的根源与终极优化方案">告别卡顿！全面解析Clash高延迟的根源与终极优化方案</a></li>
-                        <li class="py-2"><a href="/news/article-119881.htm" title="天路科学上网软件全攻略：从下载到精通的一站式指南">天路科学上网软件全攻略：从下载到精通的一站式指南</a></li>
-                        <li class="py-2"><a href="/news/article-114030.htm" title="SSR与V2Ray终极对决：翻墙利器谁主沉浮？">SSR与V2Ray终极对决：翻墙利器谁主沉浮？</a></li>
-                        <li class="py-2"><a href="/news/article-110826.htm" title="网件6300科学上网详尽指南：从安装到优化全方位解析">网件6300科学上网详尽指南：从安装到优化全方位解析</a></li>
+                        <li class="py-2"><a href="/news/article-122068.htm" title="突破网络边界：V2Ray科学上网全攻略与深度解析">突破网络边界：V2Ray科学上网全攻略与深度解析</a></li>
+                        <li class="py-2"><a href="/news/article-124636.htm" title="手把手教你用Padavan路由器搭建V2Ray科学上网环境：从入门到精通">手把手教你用Padavan路由器搭建V2Ray科学上网环境：从入门到精通</a></li>
                         <li class="py-2"><a href="/news/article-121117.htm" title="梅林固件全攻略：手把手教你实现路由器科学上网">梅林固件全攻略：手把手教你实现路由器科学上网</a></li>
-                        <li class="py-2"><a href="/news/article-120184.htm" title="360极速浏览器与v2ray的黄金组合：打造极致安全与速度的上网体验全攻略">360极速浏览器与v2ray的黄金组合：打造极致安全与速度的上网体验全攻略</a></li>
-                        <li class="py-2"><a href="/news/article-115851.htm" title="Clash没网了怎么办？一次性解决代理打开却断网的深层问题">Clash没网了怎么办？一次性解决代理打开却断网的深层问题</a></li>
+                        <li class="py-2"><a href="/news/article-112476.htm" title="深入解析Vmess技术原理及其应用">深入解析Vmess技术原理及其应用</a></li>
+                        <li class="py-2"><a href="/news/article-128299.htm" title="安卓用户必备：全方位科学上网工具指南与实战技巧">安卓用户必备：全方位科学上网工具指南与实战技巧</a></li>
+                        <li class="py-2"><a href="/news/article-112115.htm" title="解密Surfboard苹果：一款融合科技与体验的智能设备全解析">解密Surfboard苹果：一款融合科技与体验的智能设备全解析</a></li>
+                        <li class="py-2"><a href="/news/article-128644.htm" title="深度掌握Shadowrocket批量导入：从入门到精通的完整指南">深度掌握Shadowrocket批量导入：从入门到精通的完整指南</a></li>
                     </ul>
     </div>
 </div>
@@ -296,7 +296,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">20</span> <a href="/date/2025-06/" title="2025-06 归档">2025-06</a></h4>
+                <h4><span class="badge" style="float: right;">26</span> <a href="/date/2025-06/" title="2025-06 归档">2025-06</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">34</span> <a href="/date/2025-05/" title="2025-05 归档">2025-05</a></h4>
