--- a/date/2025-06/page-3.htm
+++ b/date/2025-06/page-3.htm
@@ -2,7 +2,7 @@
 <html xml:lang="zh-CN" lang="zh-CN">
 
 <head>
-    	<link rel="canonical" href="https://vpnbaike.github.io/news/page-3.htm" />
+    	<link rel="canonical" href="https://vpnbaike.github.io" />
 	<!-- basic -->
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,14 +11,17 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="viewport" content="initial-scale=1, maximum-scale=1">
 	<!-- site metas -->
-	<title>新闻资讯 - VPN百科 订阅教程网 - 第4页</title>
+	<title>2025-06归档 - 第2页 - VPN百科 订阅教程网</title>
+		<meta name="keywords" content="2025-06归档VPN百科 订阅教程网" />
+		<meta name="description" content="2025-06归档，当前是第2页" />
 	
     <meta name="author" content="VPN百科 订阅教程网">
     <meta property="og:type" content="webpage" />
-    <meta property="og:url" content="https://vpnbaike.github.io/news/page-3.htm" />
+    <meta property="og:url" content="https://vpnbaike.github.io" />
     <meta property="og:site_name" content="VPN百科 订阅教程网" />
-    <meta property="og:title" content="新闻资讯 - VPN百科 订阅教程网 - 第4页" />
+    <meta property="og:title" content="2025-06归档 - 第2页 - VPN百科 订阅教程网" />
     <meta property="og:image" content="/assets/website/img/clashnodesfree/favicon.ico" />
+        <meta property="og:description" content="2025-06归档，当前是第2页" />
         
 	<!-- bootstrap css -->
 	<link rel="stylesheet" type="text/css" href="/assets/website/css/clashnodesfree/bootstrap.min.css">
@@ -43,7 +46,7 @@
     <meta name="robots" content="max-image-preview:large" />
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <meta name="apple-mobile-web-app-title" content="新闻资讯 - VPN百科 订阅教程网 - 第4页">
+    <meta name="apple-mobile-web-app-title" content="2025-06归档 - 第2页 - VPN百科 订阅教程网">
     <meta name="format-detection" content="telephone=no">
 
     <link rel="dns-prefetch" href="https:/www.googletagmanager.com">
@@ -99,12 +102,12 @@
         <div class="container">
             <div class="breadcrumb">
               <a href="/">首页</a> / 
-              <span>新闻资讯</span>
+              <span>2025-06 归档</span>
             </div>
 
             <div class="row">
                 <div class="col-sm-12">
-                    <h1 class="services_taital mb-5">新闻资讯</h1>
+                    <h1 class="services_taital mb-5">2025-06 归档</h1>
                 </div>
             </div>
             <div class="row">
@@ -199,68 +202,8 @@
                             <p class="about_text">在当今这个数字化生存的时代，稳定高速的网络连接已成为刚需。作为突破网络限制的利器，V2Ray凭借其卓越的隐私保护和灵活的协议支持，赢得了全球用户的青睐。然而，当您满怀期待地进行网速测试，仪表盘上刺眼的</p>
                         </div>
                     </div>
-                                        <div class="row item xcblog-blog-item" data-date="2025-05-31">
-                        <div class="col-md-3">
-                            <div class="about_img">
-                                <a href="/news/article-120184.htm" title="360极速浏览器与v2ray的黄金组合：打造极致安全与速度的上网体验全攻略" class="xcblog-blog-url">
-                                    <img src="/uploads/20240323/09004ed4b09aa34decc7c94ceeb17eb2.webp" alt="360极速浏览器与v2ray的黄金组合：打造极致安全与速度的上网体验全攻略">
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-md-9">
-                            <a href="/news/article-120184.htm" title="360极速浏览器与v2ray的黄金组合：打造极致安全与速度的上网体验全攻略" class="xcblog-blog-url">
-                                <h3 class="about_taital xcblog-blog-title">360极速浏览器与v2ray的黄金组合：打造极致安全与速度的上网体验全攻略</h3>
-                            </a>
-                            <p class="about_text">引言：当浏览器遇上代理工具  在这个数据即石油的数字时代，每一次网页加载都可能成为隐私泄露的通道，每一次网络请求都可能面临速度瓶颈的困扰。360极速浏览器以其闪电般的速度和铜墙铁壁般的安全防护著称，而</p>
-                        </div>
-                    </div>
-                                        <div class="row item xcblog-blog-item" data-date="2025-05-30">
-                        <div class="col-md-3">
-                            <div class="about_img">
-                                <a href="/news/article-119881.htm" title="天路科学上网软件全攻略：从下载到精通的一站式指南" class="xcblog-blog-url">
-                                    <img src="/uploads/20240323/15ae8fa851b4c56e4081dda0520bb4ec.webp" alt="天路科学上网软件全攻略：从下载到精通的一站式指南">
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-md-9">
-                            <a href="/news/article-119881.htm" title="天路科学上网软件全攻略：从下载到精通的一站式指南" class="xcblog-blog-url">
-                                <h3 class="about_taital xcblog-blog-title">天路科学上网软件全攻略：从下载到精通的一站式指南</h3>
-                            </a>
-                            <p class="about_text">在信息高度互联的今天，全球互联网本应是无国界的知识海洋，但某些地区的网络限制却筑起了无形的数字高墙。当学术研究者无法访问国际期刊、商务人士错失海外商机、普通网民连基本的信息检索都受阻时，"科学上网"便</p>
-                        </div>
-                    </div>
-                                        <div class="row item xcblog-blog-item" data-date="2025-05-29">
-                        <div class="col-md-3">
-                            <div class="about_img">
-                                <a href="/news/article-119579.htm" title="Ubuntu 上玩转 Clash 旁路由：从入门到精通的全流程指南" class="xcblog-blog-url">
-                                    <img src="/uploads/20240323/c4695008c4879510e450301ea516b067.webp" alt="Ubuntu 上玩转 Clash 旁路由：从入门到精通的全流程指南">
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-md-9">
-                            <a href="/news/article-119579.htm" title="Ubuntu 上玩转 Clash 旁路由：从入门到精通的全流程指南" class="xcblog-blog-url">
-                                <h3 class="about_taital xcblog-blog-title">Ubuntu 上玩转 Clash 旁路由：从入门到精通的全流程指南</h3>
-                            </a>
-                            <p class="about_text">在当今信息管控日益严格的网络环境下，"科学上网"已经不仅仅是程序员或极客的专属技能，它逐渐成为每一位有获取信息自由需求的普通用户的重要能力。而在 Linux 用户圈中，Ubuntu 凭借其稳定性与用户</p>
-                        </div>
-                    </div>
-                                        <div class="row item xcblog-blog-item" data-date="2025-05-28">
-                        <div class="col-md-3">
-                            <div class="about_img">
-                                <a href="/news/article-119280.htm" title="2021年终极指南：如何寻找并稳定使用永久V2Ray节点" class="xcblog-blog-url">
-                                    <img src="/uploads/20240323/15ae8fa851b4c56e4081dda0520bb4ec.webp" alt="2021年终极指南：如何寻找并稳定使用永久V2Ray节点">
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-md-9">
-                            <a href="/news/article-119280.htm" title="2021年终极指南：如何寻找并稳定使用永久V2Ray节点" class="xcblog-blog-url">
-                                <h3 class="about_taital xcblog-blog-title">2021年终极指南：如何寻找并稳定使用永久V2Ray节点</h3>
-                            </a>
-                            <p class="about_text">随着数字时代的高速发展，数据隐私和网络自由成为了众多用户关注的焦点。面对复杂且不断变化的网络环境，科学上网工具变得尤为重要。而V2Ray，作为新一代高性能网络代理平台，以其灵活的架构和强大的隐蔽能力，</p>
-                        </div>
-                    </div>
                                         
-                    <ul class="pagination"><li><a href="/news/page-2.htm">&laquo;</a></li> <li><a href="/news/">1</a></li><li><a href="/news/page-2.htm">2</a></li><li class="active"><span>3</span></li><li><a href="/news/page-4.htm">4</a></li><li><a href="/news/page-5.htm">5</a></li><li><a href="/news/page-6.htm">6</a></li> <li><a href="/news/page-4.htm">&raquo;</a></li></ul>                </div>
+                    <ul class="pagination"><li><a href="/date/2025-06/page-2.htm">&laquo;</a></li> <li><a href="/date/2025-06/">1</a></li><li><a href="/date/2025-06/page-2.htm">2</a></li><li class="active"><span>3</span></li> <li class="disabled"><span>&raquo;</span></li></ul>                </div>
                 <div class="col-md-3">
                     <div class="panel panel-default">
     <div class="panel-heading">
@@ -268,16 +211,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-128644.htm" title="深度掌握Shadowrocket批量导入：从入门到精通的完整指南">深度掌握Shadowrocket批量导入：从入门到精通的完整指南</a></li>
-                        <li class="py-2"><a href="/news/article-115245.htm" title="我的世界Clash全攻略：在沙盒与策略的交汇处统治战场">我的世界Clash全攻略：在沙盒与策略的交汇处统治战场</a></li>
-                        <li class="py-2"><a href="/news/article-123027.htm" title="科学上网新利器：V2rayNG订阅配置全攻略与深度解析">科学上网新利器：V2rayNG订阅配置全攻略与深度解析</a></li>
+                        <li class="py-2"><a href="/news/article-113428.htm" title="从零开始：用 VSSPanel 一键搭建 V2Ray 后端的完整实战指南">从零开始：用 VSSPanel 一键搭建 V2Ray 后端的完整实战指南</a></li>
                         <li class="py-2"><a href="/news/article-124636.htm" title="手把手教你用Padavan路由器搭建V2Ray科学上网环境：从入门到精通">手把手教你用Padavan路由器搭建V2Ray科学上网环境：从入门到精通</a></li>
-                        <li class="py-2"><a href="/news/article-114030.htm" title="SSR与V2Ray终极对决：翻墙利器谁主沉浮？">SSR与V2Ray终极对决：翻墙利器谁主沉浮？</a></li>
-                        <li class="py-2"><a href="/news/article-112816.htm" title="布谷i科学上网全攻略：从新手入门到进阶使用的完整指南">布谷i科学上网全攻略：从新手入门到进阶使用的完整指南</a></li>
+                        <li class="py-2"><a href="/news/article-114302.htm" title="完整指南：如何在智能电视上使用 v2ray 打破网络限制">完整指南：如何在智能电视上使用 v2ray 打破网络限制</a></li>
+                        <li class="py-2"><a href="/news/article-120820.htm" title="制霸战场！《Clash》星光等级全方位养成指南与高阶战术解析">制霸战场！《Clash》星光等级全方位养成指南与高阶战术解析</a></li>
+                        <li class="py-2"><a href="/news/article-127275.htm" title="新春限量版Clash：传统与时尚交融的绝佳之选">新春限量版Clash：传统与时尚交融的绝佳之选</a></li>
+                        <li class="py-2"><a href="/news/article-123027.htm" title="科学上网新利器：V2rayNG订阅配置全攻略与深度解析">科学上网新利器：V2rayNG订阅配置全攻略与深度解析</a></li>
                         <li class="py-2"><a href="/news/article-111639.htm" title="完整指南：如何购买并配置 Clash 套餐">完整指南：如何购买并配置 Clash 套餐</a></li>
-                        <li class="py-2"><a href="/news/article-116791.htm" title="2021免费Vmess节点全景详解与实用配置指南">2021免费Vmess节点全景详解与实用配置指南</a></li>
-                        <li class="py-2"><a href="/news/article-121117.htm" title="梅林固件全攻略：手把手教你实现路由器科学上网">梅林固件全攻略：手把手教你实现路由器科学上网</a></li>
-                        <li class="py-2"><a href="/news/article-111633.htm" title="闪电狼CLASH全面指南：精通战术与策略，制胜游戏巅峰">闪电狼CLASH全面指南：精通战术与策略，制胜游戏巅峰</a></li>
+                        <li class="py-2"><a href="/news/article-126945.htm" title="全面解析撞击棒：从入门到精通的终极指南">全面解析撞击棒：从入门到精通的终极指南</a></li>
+                        <li class="py-2"><a href="/news/article-124311.htm" title="深度剖析V2RayNG与Trojan：从原理到实践的翻墙技术全指南">深度剖析V2RayNG与Trojan：从原理到实践的翻墙技术全指南</a></li>
+                        <li class="py-2"><a href="/news/article-128299.htm" title="安卓用户必备：全方位科学上网工具指南与实战技巧">安卓用户必备：全方位科学上网工具指南与实战技巧</a></li>
                     </ul>
     </div>
 </div>
