--- a/about-us.htm
+++ b/about-us.htm
@@ -124,16 +124,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-128299.htm" title="安卓用户必备：全方位科学上网工具指南与实战技巧">安卓用户必备：全方位科学上网工具指南与实战技巧</a></li>
-                        <li class="py-2"><a href="/news/article-126271.htm" title="解锁全球网络自由：AC1200GU路由器科学上网完全攻略">解锁全球网络自由：AC1200GU路由器科学上网完全攻略</a></li>
-                        <li class="py-2"><a href="/news/article-119280.htm" title="2021年终极指南：如何寻找并稳定使用永久V2Ray节点">2021年终极指南：如何寻找并稳定使用永久V2Ray节点</a></li>
-                        <li class="py-2"><a href="/news/article-118350.htm" title="小宝科学上网全攻略：从下载安装到高效使用的实用指南">小宝科学上网全攻略：从下载安装到高效使用的实用指南</a></li>
-                        <li class="py-2"><a href="/news/article-128644.htm" title="深度掌握Shadowrocket批量导入：从入门到精通的完整指南">深度掌握Shadowrocket批量导入：从入门到精通的完整指南</a></li>
+                        <li class="py-2"><a href="/news/article-123027.htm" title="科学上网新利器：V2rayNG订阅配置全攻略与深度解析">科学上网新利器：V2rayNG订阅配置全攻略与深度解析</a></li>
                         <li class="py-2"><a href="/news/article-123988.htm" title="Clash汉化版13.3完全攻略：从零开始掌握科学上网利器">Clash汉化版13.3完全攻略：从零开始掌握科学上网利器</a></li>
-                        <li class="py-2"><a href="/news/article-126945.htm" title="全面解析撞击棒：从入门到精通的终极指南">全面解析撞击棒：从入门到精通的终极指南</a></li>
-                        <li class="py-2"><a href="/news/article-114626.htm" title="深度解析车clash：提升汽车安全的关键">深度解析车clash：提升汽车安全的关键</a></li>
-                        <li class="py-2"><a href="/news/article-122068.htm" title="突破网络边界：V2Ray科学上网全攻略与深度解析">突破网络边界：V2Ray科学上网全攻略与深度解析</a></li>
-                        <li class="py-2"><a href="/news/article-112115.htm" title="解密Surfboard苹果：一款融合科技与体验的智能设备全解析">解密Surfboard苹果：一款融合科技与体验的智能设备全解析</a></li>
+                        <li class="py-2"><a href="/news/article-125953.htm" title="突破网络边界：Pure科学上网工具全方位解析与实用指南">突破网络边界：Pure科学上网工具全方位解析与实用指南</a></li>
+                        <li class="py-2"><a href="/news/article-127275.htm" title="新春限量版Clash：传统与时尚交融的绝佳之选">新春限量版Clash：传统与时尚交融的绝佳之选</a></li>
+                        <li class="py-2"><a href="/news/article-122715.htm" title="告别卡顿！全面解析Clash高延迟的根源与终极优化方案">告别卡顿！全面解析Clash高延迟的根源与终极优化方案</a></li>
+                        <li class="py-2"><a href="/news/article-127620.htm" title="阿里云ECS搭建科学上网代理：从零开始实现安全跨境访问">阿里云ECS搭建科学上网代理：从零开始实现安全跨境访问</a></li>
+                        <li class="py-2"><a href="/news/article-128644.htm" title="深度掌握Shadowrocket批量导入：从入门到精通的完整指南">深度掌握Shadowrocket批量导入：从入门到精通的完整指南</a></li>
+                        <li class="py-2"><a href="/news/article-124311.htm" title="深度剖析V2RayNG与Trojan：从原理到实践的翻墙技术全指南">深度剖析V2RayNG与Trojan：从原理到实践的翻墙技术全指南</a></li>
+                        <li class="py-2"><a href="/news/article-120820.htm" title="制霸战场！《Clash》星光等级全方位养成指南与高阶战术解析">制霸战场！《Clash》星光等级全方位养成指南与高阶战术解析</a></li>
+                        <li class="py-2"><a href="/news/article-128991.htm" title="华为路由器科学上网终极指南：从原理到实战配置详解">华为路由器科学上网终极指南：从原理到实战配置详解</a></li>
                     </ul>
     </div>
 </div>
@@ -145,10 +145,10 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">26</span> <a href="/date/2025-06/" title="2025-06 归档">2025-06</a></h4>
+                <h4><span class="badge" style="float: right;">2</span> <a href="/date/2025-07/" title="2025-07 归档">2025-07</a></h4>
             </li>
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">34</span> <a href="/date/2025-05/" title="2025-05 归档">2025-05</a></h4>
+                <h4><span class="badge" style="float: right;">30</span> <a href="/date/2025-06/" title="2025-06 归档">2025-06</a></h4>
             </li>
                     </ul>
     </div>
