--- a/date/2025-07/index.htm
+++ b/date/2025-07/index.htm
@@ -2,7 +2,7 @@
 <html xml:lang="zh-CN" lang="zh-CN">
 
 <head>
-    	<link rel="canonical" href="https://vpnbaike.github.io/news/page-4.htm" />
+    	<link rel="canonical" href="https://vpnbaike.github.io" />
 	<!-- basic -->
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,14 +11,17 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="viewport" content="initial-scale=1, maximum-scale=1">
 	<!-- site metas -->
-	<title>新闻资讯 - VPN百科 订阅教程网 - 第3页</title>
+	<title>2025-07归档 - VPN百科 订阅教程网</title>
+		<meta name="keywords" content="2025-07归档VPN百科 订阅教程网" />
+		<meta name="description" content="2025-07归档，当前是第1页" />
 	
     <meta name="author" content="VPN百科 订阅教程网">
     <meta property="og:type" content="webpage" />
-    <meta property="og:url" content="https://vpnbaike.github.io/news/page-4.htm" />
+    <meta property="og:url" content="https://vpnbaike.github.io" />
     <meta property="og:site_name" content="VPN百科 订阅教程网" />
-    <meta property="og:title" content="新闻资讯 - VPN百科 订阅教程网 - 第3页" />
+    <meta property="og:title" content="2025-07归档 - VPN百科 订阅教程网" />
     <meta property="og:image" content="/assets/website/img/clashnodesfree/favicon.ico" />
+        <meta property="og:description" content="2025-07归档，当前是第1页" />
         
 	<!-- bootstrap css -->
 	<link rel="stylesheet" type="text/css" href="/assets/website/css/clashnodesfree/bootstrap.min.css">
@@ -43,7 +46,7 @@
     <meta name="robots" content="max-image-preview:large" />
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <meta name="apple-mobile-web-app-title" content="新闻资讯 - VPN百科 订阅教程网 - 第3页">
+    <meta name="apple-mobile-web-app-title" content="2025-07归档 - VPN百科 订阅教程网">
     <meta name="format-detection" content="telephone=no">
 
     <link rel="dns-prefetch" href="https:/www.googletagmanager.com">
@@ -99,48 +102,48 @@
         <div class="container">
             <div class="breadcrumb">
               <a href="/">首页</a> / 
-              <span>新闻资讯</span>
+              <span>2025-07 归档</span>
             </div>
 
             <div class="row">
                 <div class="col-sm-12">
-                    <h1 class="services_taital mb-5">新闻资讯</h1>
+                    <h1 class="services_taital mb-5">2025-07 归档</h1>
                 </div>
             </div>
             <div class="row">
                 <div class="col-md-9 xcblog-blog-list">
-                                        <div class="row item xcblog-blog-item" data-date="2025-06-02">
+                                        <div class="row item xcblog-blog-item" data-date="2025-07-04">
                         <div class="col-md-3">
                             <div class="about_img">
-                                <a href="/news/article-120820.htm" title="制霸战场！《Clash》星光等级全方位养成指南与高阶战术解析" class="xcblog-blog-url">
-                                    <img src="/uploads/20240323/c8ff7aedac806fecb30cb33ee55b8cc1.webp" alt="制霸战场！《Clash》星光等级全方位养成指南与高阶战术解析">
+                                <a href="/news/article-130732.htm" title="深度剖析爱快V2Ray：从入门到精通的全方位网络自由指南" class="xcblog-blog-url">
+                                    <img src="/uploads/20240323/67515d5613f54ad595999fa7d2110788.webp" alt="深度剖析爱快V2Ray：从入门到精通的全方位网络自由指南">
                                 </a>
                             </div>
                         </div>
                         <div class="col-md-9">
-                            <a href="/news/article-120820.htm" title="制霸战场！《Clash》星光等级全方位养成指南与高阶战术解析" class="xcblog-blog-url">
-                                <h3 class="about_taital xcblog-blog-title">制霸战场！《Clash》星光等级全方位养成指南与高阶战术解析</h3>
+                            <a href="/news/article-130732.htm" title="深度剖析爱快V2Ray：从入门到精通的全方位网络自由指南" class="xcblog-blog-url">
+                                <h3 class="about_taital xcblog-blog-title">深度剖析爱快V2Ray：从入门到精通的全方位网络自由指南</h3>
                             </a>
-                            <p class="about_text">在瞬息万变的《Clash》战场上，星光等级犹如角色成长的命脉，它不仅是战斗力的直观体现，更是战略深度的核心载体。本指南将系统性地拆解星光等级的运作机制，并提供经过实战检验的进阶技巧，助你从萌新蜕变为战</p>
+                            <p class="about_text">在当今数字化时代，网络隐私与自由访问已成为刚需。爱快V2Ray作为一款集高效代理与智能路由于一体的解决方案，正以其独特的技术优势重塑着用户的网络体验。本文将带您深入探索这一工具的奥秘，从核心原理到实战</p>
                         </div>
                     </div>
-                                        <div class="row item xcblog-blog-item" data-date="2025-06-01">
+                                        <div class="row item xcblog-blog-item" data-date="2025-07-01">
                         <div class="col-md-3">
                             <div class="about_img">
-                                <a href="/news/article-120498.htm" title="V2Ray网速测试异常全解析：从零速困境到极速畅游" class="xcblog-blog-url">
-                                    <img src="/uploads/20240323/1efe5cff0e659c7211e5b8f615d11cd4.webp" alt="V2Ray网速测试异常全解析：从零速困境到极速畅游">
+                                <a href="/news/article-130379.htm" title="突破网络枷锁：Clash翻墙全攻略与深度体验" class="xcblog-blog-url">
+                                    <img src="/uploads/20240323/2c41239ac39028609af4b6e4c787f732.webp" alt="突破网络枷锁：Clash翻墙全攻略与深度体验">
                                 </a>
                             </div>
                         </div>
                         <div class="col-md-9">
-                            <a href="/news/article-120498.htm" title="V2Ray网速测试异常全解析：从零速困境到极速畅游" class="xcblog-blog-url">
-                                <h3 class="about_taital xcblog-blog-title">V2Ray网速测试异常全解析：从零速困境到极速畅游</h3>
+                            <a href="/news/article-130379.htm" title="突破网络枷锁：Clash翻墙全攻略与深度体验" class="xcblog-blog-url">
+                                <h3 class="about_taital xcblog-blog-title">突破网络枷锁：Clash翻墙全攻略与深度体验</h3>
                             </a>
-                            <p class="about_text">在当今这个数字化生存的时代，稳定高速的网络连接已成为刚需。作为突破网络限制的利器，V2Ray凭借其卓越的隐私保护和灵活的协议支持，赢得了全球用户的青睐。然而，当您满怀期待地进行网速测试，仪表盘上刺眼的</p>
+                            <p class="about_text">引言：当围墙遇见钥匙  在信息如洪流奔涌的数字时代，一堵无形的墙却将无数求知者隔绝于全球互联网之外。当维基百科的页面变成404，当学术论文库显示"无法访问"，当海外社交媒体成为镜中花月——这种被数字铁</p>
                         </div>
                     </div>
                                         
-                    <ul class="pagination"><li><a href="/news/page-3.htm">&laquo;</a></li> <li><a href="/news/">1</a></li><li><a href="/news/page-2.htm">2</a></li><li><a href="/news/page-3.htm">3</a></li><li class="active"><span>4</span></li> <li class="disabled"><span>&raquo;</span></li></ul>                </div>
+                                    </div>
                 <div class="col-md-3">
                     <div class="panel panel-default">
     <div class="panel-heading">
@@ -148,16 +151,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-124636.htm" title="手把手教你用Padavan路由器搭建V2Ray科学上网环境：从入门到精通">手把手教你用Padavan路由器搭建V2Ray科学上网环境：从入门到精通</a></li>
-                        <li class="py-2"><a href="/news/article-120820.htm" title="制霸战场！《Clash》星光等级全方位养成指南与高阶战术解析">制霸战场！《Clash》星光等级全方位养成指南与高阶战术解析</a></li>
-                        <li class="py-2"><a href="/news/article-130379.htm" title="突破网络枷锁：Clash翻墙全攻略与深度体验">突破网络枷锁：Clash翻墙全攻略与深度体验</a></li>
-                        <li class="py-2"><a href="/news/article-126271.htm" title="解锁全球网络自由：AC1200GU路由器科学上网完全攻略">解锁全球网络自由：AC1200GU路由器科学上网完全攻略</a></li>
-                        <li class="py-2"><a href="/news/article-128991.htm" title="华为路由器科学上网终极指南：从原理到实战配置详解">华为路由器科学上网终极指南：从原理到实战配置详解</a></li>
+                        <li class="py-2"><a href="/news/article-122715.htm" title="告别卡顿！全面解析Clash高延迟的根源与终极优化方案">告别卡顿！全面解析Clash高延迟的根源与终极优化方案</a></li>
+                        <li class="py-2"><a href="/news/article-120498.htm" title="V2Ray网速测试异常全解析：从零速困境到极速畅游">V2Ray网速测试异常全解析：从零速困境到极速畅游</a></li>
                         <li class="py-2"><a href="/news/article-130732.htm" title="深度剖析爱快V2Ray：从入门到精通的全方位网络自由指南">深度剖析爱快V2Ray：从入门到精通的全方位网络自由指南</a></li>
-                        <li class="py-2"><a href="/news/article-121117.htm" title="梅林固件全攻略：手把手教你实现路由器科学上网">梅林固件全攻略：手把手教你实现路由器科学上网</a></li>
-                        <li class="py-2"><a href="/news/article-128299.htm" title="安卓用户必备：全方位科学上网工具指南与实战技巧">安卓用户必备：全方位科学上网工具指南与实战技巧</a></li>
-                        <li class="py-2"><a href="/news/article-125286.htm" title="深度指南：Shadowrocket免ID使用全攻略与安全上网实践">深度指南：Shadowrocket免ID使用全攻略与安全上网实践</a></li>
-                        <li class="py-2"><a href="/news/article-121435.htm" title="深度剖析Clash悟空云：从零掌握高效代理与云端加速的完美融合">深度剖析Clash悟空云：从零掌握高效代理与云端加速的完美融合</a></li>
+                        <li class="py-2"><a href="/news/article-125614.htm" title="突破网络限制：Clash代理工具全面解析与实战指南">突破网络限制：Clash代理工具全面解析与实战指南</a></li>
+                        <li class="py-2"><a href="/news/article-127620.htm" title="阿里云ECS搭建科学上网代理：从零开始实现安全跨境访问">阿里云ECS搭建科学上网代理：从零开始实现安全跨境访问</a></li>
+                        <li class="py-2"><a href="/news/article-122386.htm" title="天行科学上网加速器终极指南：从入门到精通的全方位解析">天行科学上网加速器终极指南：从入门到精通的全方位解析</a></li>
+                        <li class="py-2"><a href="/news/article-120820.htm" title="制霸战场！《Clash》星光等级全方位养成指南与高阶战术解析">制霸战场！《Clash》星光等级全方位养成指南与高阶战术解析</a></li>
+                        <li class="py-2"><a href="/news/article-126945.htm" title="全面解析撞击棒：从入门到精通的终极指南">全面解析撞击棒：从入门到精通的终极指南</a></li>
+                        <li class="py-2"><a href="/news/article-123027.htm" title="科学上网新利器：V2rayNG订阅配置全攻略与深度解析">科学上网新利器：V2rayNG订阅配置全攻略与深度解析</a></li>
+                        <li class="py-2"><a href="/news/article-127275.htm" title="新春限量版Clash：传统与时尚交融的绝佳之选">新春限量版Clash：传统与时尚交融的绝佳之选</a></li>
                     </ul>
     </div>
 </div>
