--- a/disclaimer.htm
+++ b/disclaimer.htm
@@ -138,16 +138,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-126945.htm" title="全面解析撞击棒：从入门到精通的终极指南">全面解析撞击棒：从入门到精通的终极指南</a></li>
-                        <li class="py-2"><a href="/news/article-114626.htm" title="深度解析车clash：提升汽车安全的关键">深度解析车clash：提升汽车安全的关键</a></li>
-                        <li class="py-2"><a href="/news/article-122715.htm" title="告别卡顿！全面解析Clash高延迟的根源与终极优化方案">告别卡顿！全面解析Clash高延迟的根源与终极优化方案</a></li>
-                        <li class="py-2"><a href="/news/article-127275.htm" title="新春限量版Clash：传统与时尚交融的绝佳之选">新春限量版Clash：传统与时尚交融的绝佳之选</a></li>
-                        <li class="py-2"><a href="/news/article-121747.htm" title="手机Clash代理工具失效全解析：从故障排查到长效稳定的终极指南">手机Clash代理工具失效全解析：从故障排查到长效稳定的终极指南</a></li>
-                        <li class="py-2"><a href="/news/article-122386.htm" title="天行科学上网加速器终极指南：从入门到精通的全方位解析">天行科学上网加速器终极指南：从入门到精通的全方位解析</a></li>
-                        <li class="py-2"><a href="/news/article-112476.htm" title="深入解析Vmess技术原理及其应用">深入解析Vmess技术原理及其应用</a></li>
-                        <li class="py-2"><a href="/news/article-128299.htm" title="安卓用户必备：全方位科学上网工具指南与实战技巧">安卓用户必备：全方位科学上网工具指南与实战技巧</a></li>
-                        <li class="py-2"><a href="/news/article-115542.htm" title="锐速与V2Ray安装顺序终极解析：性能与隐私的平衡之道">锐速与V2Ray安装顺序终极解析：性能与隐私的平衡之道</a></li>
+                        <li class="py-2"><a href="/news/article-122068.htm" title="突破网络边界：V2Ray科学上网全攻略与深度解析">突破网络边界：V2Ray科学上网全攻略与深度解析</a></li>
+                        <li class="py-2"><a href="/news/article-125286.htm" title="深度指南：Shadowrocket免ID使用全攻略与安全上网实践">深度指南：Shadowrocket免ID使用全攻略与安全上网实践</a></li>
                         <li class="py-2"><a href="/news/article-128644.htm" title="深度掌握Shadowrocket批量导入：从入门到精通的完整指南">深度掌握Shadowrocket批量导入：从入门到精通的完整指南</a></li>
+                        <li class="py-2"><a href="/news/article-120498.htm" title="V2Ray网速测试异常全解析：从零速困境到极速畅游">V2Ray网速测试异常全解析：从零速困境到极速畅游</a></li>
+                        <li class="py-2"><a href="/news/article-124311.htm" title="深度剖析V2RayNG与Trojan：从原理到实践的翻墙技术全指南">深度剖析V2RayNG与Trojan：从原理到实践的翻墙技术全指南</a></li>
+                        <li class="py-2"><a href="/news/article-125614.htm" title="突破网络限制：Clash代理工具全面解析与实战指南">突破网络限制：Clash代理工具全面解析与实战指南</a></li>
+                        <li class="py-2"><a href="/news/article-127275.htm" title="新春限量版Clash：传统与时尚交融的绝佳之选">新春限量版Clash：传统与时尚交融的绝佳之选</a></li>
+                        <li class="py-2"><a href="/news/article-129684.htm" title="突破网络边界：云科学上网的终极指南与实战技巧">突破网络边界：云科学上网的终极指南与实战技巧</a></li>
+                        <li class="py-2"><a href="/news/article-127620.htm" title="阿里云ECS搭建科学上网代理：从零开始实现安全跨境访问">阿里云ECS搭建科学上网代理：从零开始实现安全跨境访问</a></li>
+                        <li class="py-2"><a href="/news/article-128299.htm" title="安卓用户必备：全方位科学上网工具指南与实战技巧">安卓用户必备：全方位科学上网工具指南与实战技巧</a></li>
                     </ul>
     </div>
 </div>
@@ -159,10 +159,10 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">26</span> <a href="/date/2025-06/" title="2025-06 归档">2025-06</a></h4>
+                <h4><span class="badge" style="float: right;">2</span> <a href="/date/2025-07/" title="2025-07 归档">2025-07</a></h4>
             </li>
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">34</span> <a href="/date/2025-05/" title="2025-05 归档">2025-05</a></h4>
+                <h4><span class="badge" style="float: right;">30</span> <a href="/date/2025-06/" title="2025-06 归档">2025-06</a></h4>
             </li>
                     </ul>
     </div>
