--- a/paid-subscribe/index.html
+++ b/paid-subscribe/index.html
@@ -111,6 +111,65 @@
                     
                                                                             <div class="panel panel-default">
                                 <div class="panel-heading">
+                                    <a href="javascript:;" class="js_to" data-url="https://xn--yfr044l4qfzsf.com/#/register?code=" data-type="FeiniaoJiasu" data-code="11wam8Ig" target="_blank"><b>飞鸟加速</b></a>
+                                </div>
+                                <div class="panel-body">
+                                    
+                                    <dl>
+                                        <dt>资费</dt>
+                                                                                <dd>
+                                            <p>
+                                                <label>基础版-县令：</label> ¥15.00 /月付。 
+                                                                                                每月 150G 流量; 
+                                                                                                多地跨境高速线路，超低延迟与超高速率; 
+                                                                                                解锁Netfilx，Disney+，Tiktok 等流媒体; 
+                                                                                                专属GPT集群，保证高可用性; 
+                                                                                                可多设备同时使用; 
+                                                                                                专业客服支持; 
+                                                                                            </p>
+                                        </dd>
+                                                                                <dd>
+                                            <p>
+                                                <label>进阶版-知府：</label> ¥25.00 /月付。 
+                                                                                                每月 260G 流量; 
+                                                                                                多地跨境高速线路，超低延迟与超高速率; 
+                                                                                                解锁Netfilx，Disney+，Tiktok 等流媒体; 
+                                                                                                专属GPT集群，保证高可用性; 
+                                                                                                可多设备同时使用; 
+                                                                                                专业客服支持; 
+                                                                                            </p>
+                                        </dd>
+                                                                                <dd>
+                                            <p>
+                                                <label>高阶版-巡抚：</label> ¥35.00 /月付。 
+                                                                                                每月 370G 流量; 
+                                                                                                多地跨境高速线路，超低延迟与超高速率; 
+                                                                                                解锁Netfilx，Disney+，Tiktok 等流媒体; 
+                                                                                                专属GPT集群，保证高可用性; 
+                                                                                                可多设备同时使用; 
+                                                                                                专业客服支持; 
+                                                                                            </p>
+                                        </dd>
+                                                                                <dd>
+                                            <p>
+                                                <label>专业版-总督：</label> ¥45.00 /月付。 
+                                                                                                每月 480G 流量; 
+                                                                                                多地跨境高速线路，超低延迟与超高速率; 
+                                                                                                解锁Netfilx，Disney+，Tiktok 等流媒体; 
+                                                                                                专属GPT集群，保证高可用性; 
+                                                                                                可多设备同时使用; 
+                                                                                                专业客服支持; 
+                                                                                            </p>
+                                        </dd>
+                                                                            </dl>
+                                </div>
+                                <div class="panel-footer">
+                                    <a href="javascript:;" class="js_to" data-url="https://xn--yfr044l4qfzsf.com/#/register?code=" data-type="FeiniaoJiasu" data-code="11wam8Ig" target="_blank">点击查看</a>
+                                </div>
+                            </div>
+                            <hr />
+                                                        <div class="panel panel-default">
+                                <div class="panel-heading">
                                     <a href="javascript:;" class="js_to" data-url="https://155.248.222.101/#/register?code=" data-type="Xiyou" data-code="7WiPAwPs" target="_blank"><b>西游云</b></a>
                                 </div>
                                 <div class="panel-body">
@@ -464,16 +523,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-125286.htm" title="深度指南：Shadowrocket免ID使用全攻略与安全上网实践">深度指南：Shadowrocket免ID使用全攻略与安全上网实践</a></li>
-                        <li class="py-2"><a href="/news/article-119280.htm" title="2021年终极指南：如何寻找并稳定使用永久V2Ray节点">2021年终极指南：如何寻找并稳定使用永久V2Ray节点</a></li>
+                        <li class="py-2"><a href="/news/article-128991.htm" title="华为路由器科学上网终极指南：从原理到实战配置详解">华为路由器科学上网终极指南：从原理到实战配置详解</a></li>
+                        <li class="py-2"><a href="/news/article-123665.htm" title="沉浸式虚拟体验：手把手教你下载与安装VR Clash游戏全攻略">沉浸式虚拟体验：手把手教你下载与安装VR Clash游戏全攻略</a></li>
+                        <li class="py-2"><a href="/news/article-120820.htm" title="制霸战场！《Clash》星光等级全方位养成指南与高阶战术解析">制霸战场！《Clash》星光等级全方位养成指南与高阶战术解析</a></li>
+                        <li class="py-2"><a href="/news/article-124311.htm" title="深度剖析V2RayNG与Trojan：从原理到实践的翻墙技术全指南">深度剖析V2RayNG与Trojan：从原理到实践的翻墙技术全指南</a></li>
+                        <li class="py-2"><a href="/news/article-123350.htm" title="突破网络边界：全方位指南教你如何添加科学上网节点">突破网络边界：全方位指南教你如何添加科学上网节点</a></li>
+                        <li class="py-2"><a href="/news/article-130732.htm" title="深度剖析爱快V2Ray：从入门到精通的全方位网络自由指南">深度剖析爱快V2Ray：从入门到精通的全方位网络自由指南</a></li>
+                        <li class="py-2"><a href="/news/article-122386.htm" title="天行科学上网加速器终极指南：从入门到精通的全方位解析">天行科学上网加速器终极指南：从入门到精通的全方位解析</a></li>
                         <li class="py-2"><a href="/news/article-124953.htm" title="Clash免费节点配置全攻略：从入门到精通的安全代理指南">Clash免费节点配置全攻略：从入门到精通的安全代理指南</a></li>
-                        <li class="py-2"><a href="/news/article-111633.htm" title="闪电狼CLASH全面指南：精通战术与策略，制胜游戏巅峰">闪电狼CLASH全面指南：精通战术与策略，制胜游戏巅峰</a></li>
-                        <li class="py-2"><a href="/news/article-115851.htm" title="Clash没网了怎么办？一次性解决代理打开却断网的深层问题">Clash没网了怎么办？一次性解决代理打开却断网的深层问题</a></li>
-                        <li class="py-2"><a href="/news/article-122068.htm" title="突破网络边界：V2Ray科学上网全攻略与深度解析">突破网络边界：V2Ray科学上网全攻略与深度解析</a></li>
-                        <li class="py-2"><a href="/news/article-127945.htm" title="伪造IP冲突：网络安全的隐形杀手与全面防御指南">伪造IP冲突：网络安全的隐形杀手与全面防御指南</a></li>
-                        <li class="py-2"><a href="/news/article-114926.htm" title="潘多拉固件中集成V2Ray全攻略：从配置到优化的科学上网实践笔记">潘多拉固件中集成V2Ray全攻略：从配置到优化的科学上网实践笔记</a></li>
-                        <li class="py-2"><a href="/news/article-124636.htm" title="手把手教你用Padavan路由器搭建V2Ray科学上网环境：从入门到精通">手把手教你用Padavan路由器搭建V2Ray科学上网环境：从入门到精通</a></li>
-                        <li class="py-2"><a href="/news/article-114302.htm" title="完整指南：如何在智能电视上使用 v2ray 打破网络限制">完整指南：如何在智能电视上使用 v2ray 打破网络限制</a></li>
+                        <li class="py-2"><a href="/news/article-126945.htm" title="全面解析撞击棒：从入门到精通的终极指南">全面解析撞击棒：从入门到精通的终极指南</a></li>
+                        <li class="py-2"><a href="/news/article-127620.htm" title="阿里云ECS搭建科学上网代理：从零开始实现安全跨境访问">阿里云ECS搭建科学上网代理：从零开始实现安全跨境访问</a></li>
                     </ul>
     </div>
 </div>
@@ -485,10 +544,10 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">26</span> <a href="/date/2025-06/" title="2025-06 归档">2025-06</a></h4>
+                <h4><span class="badge" style="float: right;">2</span> <a href="/date/2025-07/" title="2025-07 归档">2025-07</a></h4>
             </li>
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">34</span> <a href="/date/2025-05/" title="2025-05 归档">2025-05</a></h4>
+                <h4><span class="badge" style="float: right;">30</span> <a href="/date/2025-06/" title="2025-06 归档">2025-06</a></h4>
             </li>
                     </ul>
     </div>
